--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -6,34 +6,34 @@
 #### [ 习近平昔日密友称其亟欲追求权力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018243.md)
 #### [ 二十大：谁有可能跻身新一届常委(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018159.md)
 #### [ 云南女局长搞权色交易被开除公职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018272.md)
+#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
 #### [ 中共中央军委改组 习近平重用台海帮(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018163.md)
 #### [ 章天亮: 江泽民露面 释放什么信号？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659457.md)
-#### [ 20大前江泽民“诡异照”流出 习近平竟遭如此对待(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018350.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
+#### [ 20大前江泽民“诡异照”流出 习近平竟遭如此对待(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018350.md)
 #### [ 惠虎宇：从“人民公仆”到“人民领袖”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838962.md)
 #### [ 七常委名单众说纷纭 总理人选习近平无可奈何？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659499.md)
 #### [ 因玄奘寺丑闻被免职 南京女官换官衔露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838922.md)
 #### [ 习将赴印尼坐高铁？二十大后权力或更集中 美国受益？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659553.md)
 #### [ 岳山：习近平二十大前隐身十天的谜底是什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838677.md)
 #### [ 传河南新乡男子驾车撞飞4名防疫人员再持刀伤人(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018292.md)
-#### [ 被蓬佩奥真相视频刺痛 中共企图施压反遭呛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838934.md)
 #### [ 【新闻看点】乌下令不与普京谈判 中共风向突变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839071.md)
+#### [ 被蓬佩奥真相视频刺痛 中共企图施压反遭呛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838934.md)
 #### [ 中共纪检高层频繁异动 李仰哲任上海市纪委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018184.md)
 #### [ 二十大前抖音直播禁用粤语 被指是政治操作](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839150.md)
 #### [ 美经济学家：中共的最大危机不是房地产 而是……](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659538.md)
 #### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
-#### [ 中国新闻快报：多地封控升级 警察持枪镇压民众 武汉病毒专家突然离世](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544016.md)
 #### [ CIA局长：习已下令军方2027年前准备武力犯台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659631.md)
+#### [ 中国新闻快报：多地封控升级 警察持枪镇压民众 武汉病毒专家突然离世](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544016.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 突发：乌鲁木齐封城 所有离疆客运列车暂停(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018311.md)
 #### [ 华日：北京要求跨国银行 二十大前莫谈政治(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018161.md)
 #### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659415.md)
 #### [ 习近平示范立竿见影 北京马拉松透惊人信号？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659400.md)
 #### [ 新疆疫情反弹全疆客运列车暂停 引发热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839083.md)
+#### [ 北京街头公共电话铃开始响啊响 是谁在拨打](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838907.md)
 #### [ 中共背水一战 二十大不得不让习连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018319.md)
 #### [ 习近平最神秘的老乡 传晋升中纪委副书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018123.md)
-#### [ 北京街头公共电话铃开始响啊响 是谁在拨打](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838907.md)
 #### [ 二十大人事仍是谜 专家析习连任和中共烂摊子](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838146.md)
 #### [ 红二代再曝政治传言 习最大挑战居然是他](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659289.md)
 #### [ 中共官场诡异多变 传前山东省长遭从正部级降为正处级(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999404.md)
@@ -43,11 +43,11 @@
 #### [ 二十大前 美媒爆中国遭重大金融危机 北京不作为](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544046.md)
 #### [ 【网闻】返乡人与中共网格员博弈是如何取胜的](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838976.md)
 #### [ 英智库看中共20大：没有一个总理人选合条件](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838292.md)
+#### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659415.md)
+#### [ 令人民愤怒 一件金正恩不敢让百姓知道的事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018251.md)
+#### [ 红二代再曝政治传言 习最大挑战居然是他](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659289.md)
 #### [ 北京马拉松二十大后复办 3万规模网民吐槽“良心呢？”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018217.md)
 #### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
-#### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659415.md)
 #### [ 保二十大政治安全 北京杀鸡儆猴 1人确诊8人被抓 新疆禁出省](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659661.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 中共在云南“荷枪实弹”要清零 各地加码管控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544014.md)
-#### [ 令人民愤怒 一件金正恩不敢让百姓知道的事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018251.md)
-#### [ 二十大前 中共纪委和军方人事先行调整](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838485.md)
-#### [ 二十大任军委6指标 习用兵方向这样布局？！](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659529.md)
