同步于: 10月6日8时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -50,4 +50,4 @@
 #### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659415.md)
 #### [ 中共在云南“荷枪实弹”要清零 各地加码管控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544014.md)
 #### [ 令人民愤怒 一件金正恩不敢让百姓知道的事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018251.md)
-#### [ 北京马拉松二十大后复办 3万规模网民吐槽“良心呢？”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018217.md)
+#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
