--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -23,9 +23,9 @@
 #### [ 中共纪检高层频繁异动 李仰哲任上海市纪委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018184.md)
 #### [ 二十大前抖音直播禁用粤语 被指是政治操作](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839150.md)
 #### [ 美经济学家：中共的最大危机不是房地产 而是……](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659538.md)
+#### [ 中国新闻快报：多地封控升级 警察持枪镇压民众 武汉病毒专家突然离世](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544016.md)
 #### [ 习近平二十大人事卡位 “二号人物”受关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544244.md)
 #### [ 北京街头公共电话铃开始响啊响 是谁在拨打](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838907.md)
-#### [ 中国新闻快报：多地封控升级 警察持枪镇压民众 武汉病毒专家突然离世](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544016.md)
 #### [ CIA局长：习已下令军方2027年前准备武力犯台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659631.md)
 #### [ 被蓬佩奥真相视频刺痛 中共欲施压反遭呛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838934.md)
 #### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
@@ -49,5 +49,5 @@
 #### [ 英智库看中共20大：没有一个总理人选合条件](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838292.md)
 #### [ 红二代再曝政治传言 习最大挑战居然是他](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659289.md)
 #### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
+#### [ 章天亮: 劝退习与李接任军委副主席 都是障眼法 真盘算是这⋯⋯](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659784.md)
 #### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659415.md)
-#### [ 北京马拉松二十大后复办 3万规模网民吐槽“良心呢？”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018217.md)
