--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
+#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
 #### [ 二十大前闭门内斗？政治局会议秘而不宣(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018327.md)
 #### [ 二十大习家军铺满政治局 福建帮或成大赢家(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018323.md)
-#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
+#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
+#### [ 美国记者曝习近平30年前旧文 引发关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839654.md)
+#### [ 章天亮: 劝退习与李接任军委副主席 都是障眼法 真盘算是这⋯⋯](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659784.md)
 #### [ 习近平昔日密友称其亟欲追求权力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018243.md)
 #### [ 二十大：谁有可能跻身新一届常委(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018159.md)
 #### [ 云南女局长搞权色交易被开除公职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018272.md)
-#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
-#### [ 中共中央军委改组 习近平重用台海帮(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018163.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 章天亮: 江泽民露面 释放什么信号？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659457.md)
-#### [ 美国记者曝习近平30年前旧文 引发关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839654.md)
-#### [ 章天亮: 劝退习与李接任军委副主席 都是障眼法 真盘算是这⋯⋯](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659784.md)
-#### [ 惠虎宇：从“人民公仆”到“人民领袖”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838962.md)
-#### [ 20大前江泽民“诡异照”流出 习近平竟遭如此对待(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018350.md)
+#### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
 #### [ 中共20大逼近 中国多省无预警“封城”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018367.md)
-#### [ 因玄奘寺丑闻被免职 南京女官换官衔露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838922.md)
-#### [ 习将赴印尼坐高铁？二十大后权力或更集中 美国受益？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659553.md)
-#### [ 传河南新乡男子驾车撞飞4名防疫人员再持刀伤人(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018292.md)
-#### [ 七常委名单众说纷纭 总理人选习近平无可奈何？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659499.md)
-#### [ 【新闻看点】乌下令不与普京谈判 中共风向突变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839071.md)
-#### [ 岳山：习近平二十大前隐身十天的谜底是什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838677.md)
-#### [ 二十大前抖音直播禁用粤语 被指是政治操作](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839150.md)
-#### [ 中共纪检高层频繁异动 李仰哲任上海市纪委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018184.md)
-#### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
-#### [ 被蓬佩奥真相视频刺痛 中共企图施压反遭呛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838934.md)
-#### [ CIA局长：习已下令军方2027年前准备武力犯台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659631.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
-#### [ 美经济学家：中共的最大危机不是房地产 而是……](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659538.md)
-#### [ 北京街头公共电话铃开始响啊响 是谁在拨打](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838907.md)
+#### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839313.md)
 #### [ 二十大来临 英媒爆中国经济陷入五大困境 李克强无能为力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659862.md)
 #### [ 云南大白持枪吓坏百姓 反习派发亡党警告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659745.md)
-#### [ 中共背水一战 二十大不得不让习连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018319.md)
-#### [ 传北方民族大学收学生护照及港澳台通行证 恐出国不归(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018379.md)
-#### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839313.md)
 #### [ 这一危机远超“清零”影响？李嘉诚赶紧跑路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659883.md)
-#### [ 习近平二十大人事卡位 “二号人物”受关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544244.md)
-#### [ 新疆疫情反弹全疆客运列车暂停 引发热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839083.md)
-#### [ 颜丹：中共铁拳下有多少生命“隐入尘烟”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838857.md)
-#### [ 中国新闻快报：多地封控升级 警察持枪镇压民众 武汉病毒专家突然离世](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544016.md)
-#### [ 被蓬佩奥真相视频刺痛 中共欲施压反遭呛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838934.md)
+#### [ 传北方民族大学收学生护照及港澳台通行证 恐出国不归(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018379.md)
 #### [ 港媒曝二十大修改党章细节 习近平追求长期执政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659829.md)
-#### [ 江曾被习追杀？二十大前恶兆不断 石老人被雷劈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659415.md)
-#### [ 习近平示范立竿见影 北京马拉松透惊人信号？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659400.md)
-#### [ 二十大人事仍是谜 专家析习连任和中共烂摊子](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838146.md)
-#### [ 中共官场诡异多变 传前山东省长遭从正部级降为正处级(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999404.md)
-#### [ 突发：乌鲁木齐封城 所有离疆客运列车暂停(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018311.md)
-#### [ 【网闻】返乡人与中共网格员博弈是如何取胜的](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13838976.md)
 #### [ 二十大后举什么旗？外界观察习近平左转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545008.md)
 #### [ 专家：中共经济模式自挖陷阱 难阻经济放缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839667.md)
-#### [ 红二代再曝政治传言 习最大挑战居然是他](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659289.md)
+#### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839313.md)
+#### [ 施压蓬佩奥的公函曝光 中共虚假宣传被戳穿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839614.md)
+#### [ 政治局会议 秘而不宣 专家分析人事方案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544792.md)
+#### [ 蓬佩奥：共产党最害怕中国人听到真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839844.md)
+#### [ 听者胆颤心惊 毛泽东究竟留下了哪些临终遗言？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018072.md)
+#### [ 李文亮死亡前的病历首曝光&nbsp;&nbsp;(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018436.md)
+#### [ 河北邢台防疫政策靠“嘴巴” 可以“讨价还价”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018372.md)
+#### [ 二十大后经济左转？“人民经济”论掀风波 ](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544738.md)
+#### [ 中共欲在港搞国际新秩序 分析：三字解决](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659880.md)
+#### [ 将选举数据存于中国服务器 美华裔CEO被捕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839611.md)
+#### [ 【热门话题】二十大后举什么旗？/分析中共新一届人事方案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545082.md)
+#### [ 施压蓬佩奥的公函曝光 中共虚假宣传被戳穿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839614.md)
+#### [ 二十大前网络监控升级 民众聊天群组被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840014.md)
+#### [ 英媒详析中国经济陷入困境的五个原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659910.md)
+#### [ 二十大前中共封网升级 大量社交聊天群组被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545042.md)
+#### [ 中共央企“中交集团”面临日益增长债务风险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839605.md)
+#### [ 分析：世界在变 蓬佩奥新战略令中共恐慌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839564.md)
+#### [ 习近平为何在2021年出现了破颧纹？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018335.md)
+#### [ 西双版纳千人滞留机场 警察持枪恐吓并打人(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018356.md)
+#### [ 王友群：原最高法院副院长沈德咏的欺世大谎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839618.md)
+#### [ 分析：二十大前中国经济放缓的五大原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839458.md)
+#### [ 颜丹：中共铁拳下有多少生命“隐入尘烟”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13838857.md)
+#### [ 海天酱油双标背后：为省1分钱选致癌物添加剂](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839613.md)
+#### [ 德媒：极端防疫政策下 外国人纷纷逃离中国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544514.md)
+#### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
+#### [ 云南大白持枪吓坏百姓 反习派发亡党警告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/659745.md)
+#### [ 晒视频庆新片票房大捷 李冰冰翩翩起舞引反弹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839665.md)
+#### [ CIA局长：习已下令军方2027年前准备武力犯台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659631.md)
+#### [ 习近平二十大人事卡位 “二号人物”受关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544244.md)
+#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
+#### [ 摆脱山寨恶名？专家点中国“专利申请”背后陷阱(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018396.md)
